_sass/chronicle/_article.scss
#content section {
  // Comments
  margin-top: 2em;
}

article {
  padding-top: 1em;
  a {
    @extend .force-wrap;
    text-decoration: underline;
  }
  header {
    position: relative;
    padding-top: 2em;
    padding-bottom: 1em;
    margin-bottom: 1em;
    background: $img-border bottom left repeat-x;
    h1 {
      margin: 0;
      font-weight: 500;
      a {
        text-decoration: none;
        &:hover { text-decoration: underline; }
      }
    }
    p {
      font-size: 1em;
      color: $text-color-light;
      margin: 0;
      &.meta {
        @extend .serif;
        position: absolute; top: 0;
      }
    }
    @media only screen and (min-width: 768px) {
      margin-bottom: 1.5em;
      padding-bottom: 1em;
      background: $img-border bottom left repeat-x;
    }
  }
  h2 {
    padding-top: 0.8em;
    background: $img-border top left repeat-x;
  }
  .entry-content {
    em {
      font-style: italic;
    }
    strong {
      font-weight: bold;
    }
    a {
      @include border-radius(4px);
      @include transition(background-color .3s, padding .3s);
      &:hover {
        background-color: #dedede;
        padding: 0 0.3em 0;
      }
    }

    ol {
      list-style: decimal;
    }

    ul {
      list-style: disc;
    }

    ol, ul {
      margin-left: 3em;

      li {
        margin-bottom: .7em;
      }

      li:last-child {
        margin-bottom: 0;
      }
    }

    table {
      border-spacing: 0;
      border-collapse: separate;
      margin-top: 1em;
      margin-bottom: 2em;
      tr th {
        font-weight: bold;
        border-right: 1px solid lighten($text-color, 50);
        border-bottom: 2px solid lighten($text-color, 50);
        padding: 0.2em;
        &:last-child {
          border-right: none;
        }
      }
      tr td {
        border-right: 1px solid lighten($text-color, 50);
        border-bottom: 1px solid lighten($text-color, 50);
        padding: 0.2em;
        &:last-child {
          border-right: none;
        }
      }
    }
  }
  .entry-content & h2:first-child, header + h2 { padding-top: 0; }
  h2:first-child, header + h2 { background: none; }
  .feature {
    padding-top: .5em;
    margin-bottom: 1em;
    padding-bottom: 1em;
    background: $img-border bottom left repeat-x;
    font-size: 2.0em; font-style: italic;
    line-height: 1.3em;
  }
  img, video, .flash-video {
    @extend .flex-content;
    @extend .basic-alignment;
    @include shadow-box;
  }
  video, .flash-video { margin: 0 auto 1.5em; }
  video { display: block; width: 100%; }
  .flash-video {
    position: relative;
    display: block;
    padding-bottom: 56.25%;
    padding-top: 1px;
    height: 0;
    overflow: hidden;
    iframe, object, embed {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }
  > footer {
    @include border-radius(5px);
    margin-top: 2em;
    p.meta {
      margin-bottom: .8em;
      font-size: .85em;
      clear: both;
      overflow: hidden;
      &:last-child {
        margin-bottom: 0;
      }
      a.basic-alignment {
        margin-bottom: 0;
      }
    }
    .byline + time:before, time +time:before, .comments:before, .byline ~ .categories:before {
      @extend .separator;
    }
    a[rel=full-article] {
      background-color: white;
      display: inline-block;
      padding: .4em .8em;
      margin-right: .5em;
      text-decoration: underline;
      border: 2px solid #ddd;
      color: mix($text-color, $text-color-light);
      @extend .serif;
      @include transition(border-color .3s);
      @include border-radius(3px 3px);
      &:hover {
        border-color: #000;
        text-shadow: none;
      }
    }
  }
}

